--- a/Task-01_HTML-Basics/index.html
+++ b/Task-01_HTML-Basics/index.html
@@ -284,3 +284,4 @@
         <a href="https://github.com/kolodindv/web-dev-course-SSU-2021/tree/master/Task-01_HTML-Basics" target="blank">This project on Github</a>
     </footer>
 </body>
+</html>
